--- a/src/app/component/place-order/place-order.component.html
+++ b/src/app/component/place-order/place-order.component.html
@@ -1,1 +1,45 @@
-<p>place-order works!</p>
+<div class="main-container">
+    <div class="order-msg">
+        <div>
+            <img class="top-img" src="../../../assets/order1.png">
+        </div>
+        <div>
+            <p class="placed-msg">Order Placed Successfully</p>
+        </div>
+        <div>
+            <img class="bottom-img" src="../../../assets/order2.png">
+        </div>
+    </div>
+    <div class="msg">
+        <p style="text-align: center;font: normal normal normal 18px/22px Lato;color: #333232;opacity: 1; ">
+            hurray!!! your order is confirmed<br> the order id is #123456 save the order id for<br> further
+            communication..
+        </p>
+    </div>
+    <div class="details-table">
+        <div>
+            <table style="border: .05px solid rgb(198, 192, 192) " WIDTH="65% " CELLPADDING="10 " CELLSPACING="0 ">
+                <tr style="border: 1px solid #DCDCDC;background-color: gainsboro ">
+                    <TH COLSPAN="1 ">
+                        <H3 style="text-align: center; ">Email</H3>
+                    </TH>
+                    <TH COLSPAN="1 ">
+                        <H3 style="text-align: center; ">Contact us</H3>
+                    </TH>
+                    <TH COLSPAN="1 ">
+                        <H3 style="text-align: center; ">Address</H3>
+                    </TH>
+                  </tr>
+                  <tr >
+                    <td style="text-align: center;border: .05px solid rgb(198, 192, 192)  ">admin@bookstore.com</td>
+                    <td style="text-align: center; border: .05px solid rgb(198, 192, 192)  ">+91-8163475881</td>
+                    <td style="border: .05px solid rgb(198, 192, 192) ">42, 14th Main, 15th Cross, Sector 4 ,opp to BDA complex,<br> near Kumarakom restaurant, HSR Layout,<br> Bangalore 560034</td>
+                  </tr>
+            </table>
+        </div>
+    </div>
+    <div class="continue-button">
+        <button mat-raised-button color="#3371B5" routerLink="/dashboard/books">CONTINUE SHOPPING</button>
+    </div>
+</div>
+
