--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -103,6 +103,7 @@
   .order {
     display: flex;
     flex-direction: row;
+    cursor: pointer;
   }
 
   .order img {
@@ -114,6 +115,15 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12px;
     margin-top: -2px;
+   
+  }
+  .cart {
+    display: flex;
+    flex-direction: column;
+    margin: 1px;
+    background: transparent;
+    border: none;
+    margin-right: 240px;
   }
 
 .footer {
