--- a/src/app/component/quick-view/quick-view.component.html
+++ b/src/app/component/quick-view/quick-view.component.html
@@ -18,19 +18,17 @@
                 <div class="image">
                     <img src="../../../assets/book1.png" alt="bookImage">
                 </div>
-                <!-- <button class="btn">ADD TO BAG</button>
-                <button class="btn2">
-                    <mat-icon id="fav-icons">favorite</mat-icon>WHISH LIST
-                </button> -->
+               
                 <div class="bottom-options">
                     <div class="buttons">
-                        <button class="cart-button"  mat-raised-button (click)="addToBag()">Add to Bag</button>
-                   
+                        <button class="cart-button" mat-raised-button (click)="addToBag()">Add to Bag</button>
+
                         <button class="wishlist-button" mat-raised-button (click)=" wishlist()">
-                            <img class="wish-img" src="../../../assets/favorite_FILL0_wght400_GRAD0_opsz48.svg">Wishlist</button>
-                           
+                            <img class="wish-img"
+                                src="../../../assets/favorite_FILL0_wght400_GRAD0_opsz48.svg">Wishlist</button>
+
                     </div>
-            
+
                 </div>
             </div>
 
@@ -61,6 +59,8 @@
                     <p>Customer Feedback</p>
                 </div>
 
+              
+
                 <div class="overallrating">
                     <div class="rate-para">
                         <p class="ratename">Overall Rating</p>
@@ -81,12 +81,16 @@
                         </div>
 
                     </div>
+                    <textarea matInput class="review" type="text" placeholder="write a review"
+                        name="comment"></textarea>
 
                     <div>
                         <button class="submitbutton" mat-flat-button color="primary">Submit</button>
                     </div>
 
                 </div>
+
+
             </div>
         </div>
     </div>
